# pipegen

./: .gitignore  Makefile  README.md  dev-requirements.in  dev-requirements.txt  example-config.yml  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: pr_automerge.yml  python_publish.yml
auto/: yamldiff
pipegen/: __init__.py  args.py  cli.py  config.py  schema.py
pipegen/generators/: __init__.py  codebuild.py  codepipeline.py  iam.py  interfaces.py  logs.py
tests/: test_args.py  test_cli.py  test_config.py
tests/config/: example-config-feature.yml  example-config-main.yml
tests/generators/: test_codebuild.py  test_iam.py  test_logs.py
