[metadata]
name = pipegen
description = CodePipeline Generator
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
author = Sam Jarrett
author_email = sam@samjarrett.com.au

[options]
include_package_data = True
packages = find:
install_requires =
    cfn-sync>=0.0.9
    boto3
    pyyaml
    jinja2
setup_requires =
    setuptools_scm
python_requires = >= 3.6

[options.entry_points]
console_scripts = 
    pipegen = pipegen.cli:main

[options.packages.find]
exclude =
    tests

